Update US News button link to relative path

--- a/templates/bbc.html
+++ b/templates/bbc.html
@@ -43,7 +43,7 @@
     <h2>Today's Highlight:</h2>
     </span>
     <span>
-        <button><a href="index">US News</a></button>
+        <button><a href="./">US News</a></button>
         <button><a href="bbc">BBC-News (world)</a></button>
        </span>
 </div>
